--- a/index.htm
+++ b/index.htm
@@ -5,6 +5,6 @@
 </head>
 <body>
   <h1>Funny Cat Picture</h1>
-  <img src="funny-cat.jpg" alt="Funny Cat">
+  <img src="funnycatbughunter.jpg" alt="Funny Cat">
 </body>
 </html>
